# opencode-project-agents

./: .gitignore
iso-26262-rust-mapping-coding-guidelines/: .gitignore  AGENTS.md  README.md  pyproject.toml  rust-toolchain.toml
iso-26262-rust-mapping-coding-guidelines/audit_checklists/: rule_checklist_template.md
iso-26262-rust-mapping-coding-guidelines/commands/: query-review-commands.md
iso-26262-rust-mapping-coding-guidelines/config/: change_growth_policy.yaml  corpus_registry.yaml  extractor_paths.yaml
iso-26262-rust-mapping-coding-guidelines/data/: coverage_matrix.csv  enforcement_catalog.yaml  run_registry.yaml  seed_topics.yaml  target_scope.yaml  todo_guidelines.yaml
iso-26262-rust-mapping-coding-guidelines/docs/: baseline-rotation.md  decision-log.md  deviation_process.md  extractor-feedback-policy.md  new-session-bootstrap.md
iso-26262-rust-mapping-coding-guidelines/feedback/: extractor_findings.yaml
iso-26262-rust-mapping-coding-guidelines/ideas/: iso26262_guideline_seeding_plan_v4.md
iso-26262-rust-mapping-coding-guidelines/plans/: autonomous-controller-convergence-plan.md  controller-example-outcome-diversity-plan.md  controller-loop-commit-fresh-instance-llm-decision-plan.md  controller-quality-and-branch-safety-hardening-plan.md  diffset-html-review-feedback-loop-plan.md  fls-proxy-completeness-and-rule-decomposition-plan.md  guideline-spec-v2-misra-fields-plan.md  iso-rust-grow-pipeline-defect-remediation-plan.md  iso26262-rust-seed-grow-operationalization-plan.md  known-good-benchmark-pack-and-autonomous-integration-plan.md  (+26 more)
(+3427 files in other folders)
